--- a/linkedin.html
+++ b/linkedin.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
+<head>
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+</head>
+
 <body>
-    <footer>
-        <div class="badge-base LI-profile-badge" data-locale="es_ES" data-size="medium" data-theme="dark" data-type="HORIZONTAL" data-vanity="vcardonas" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://co.linkedin.com/in/vcardonas?trk=profile-badge">Valentina Cardona Saldaña</a></div>
-    </footer>
-    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+    <div class="badge-base LI-profile-badge" data-locale="es_ES" data-size="medium" data-theme="dark"
+        data-type="HORIZONTAL" data-vanity="vcardonas" data-version="v1"><a class="badge-base__link LI-simple-link"
+            href="https://co.linkedin.com/in/vcardonas?trk=profile-badge">Valentina Cardona Saldaña</a></div>
 </body>
+
 </html>
